Split pawn and rook logic into their own seperate files. Also fixed en passant so it works for both sides instead of only for white.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,8 @@ add_executable(ChessEngine main.c
         EvalFunc.c
         ChessGame.h
         ChessGame.c
+        Pieces/Pawn.h
+        Pieces/Pawn.c
+        Pieces/Rook.h
+        Pieces/Rook.c
 )
