Added both Queen and King support. Created a placeholder function for seeing if a square is attacked which will be used both for evaluation and detecting checks.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,8 @@ add_executable(ChessEngine main.c
         Pieces/Rook.c
         Pieces/Bishop.h
         Pieces/Bishop.c
+        Pieces/Queen.h
+        Pieces/Queen.c
+        Pieces/King.h
+        Pieces/King.c
 )
